--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^3.15.5",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
