--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.15.5",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
