--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.18",
     "moment": "^2.30.1",
     "react": "18.3.1",
