--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.15.5",
