--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyBqytS9JuIZ9I36FjfCDfA6R-ywmrQ0PAY"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
