--- a/ios/react_native_ui/Info.plist
+++ b/ios/react_native_ui/Info.plist
@@ -32,7 +32,8 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string>This app for education</string>
+	<!-- <string/> -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
